# ViewerKiller

./: .gitignore  Cargo.toml  ETAT-DU-PROJET.md  FEUILLE-DE-ROUTE.md  LICENSE  README.md  TESTS-RUNTIME.md
.github/workflows/: ci.yml  release.yml
app/viewerkiller/: Cargo.toml
app/viewerkiller/src/: clipboard.rs  controller.rs  gui.rs  host.rs  lib.rs  main.rs  security.rs  update.rs
app/viewerkiller/tests/: e2e.rs  hardening.rs  multiscreen.rs  reconnect.rs
crates/vk-core/: Cargo.toml
crates/vk-core/src/: codec.rs  crypto.rs  lib.rs  protocol.rs
crates/vk-media/: Cargo.toml
crates/vk-media/src/: lib.rs
crates/vk-net/: Cargo.toml
crates/vk-net/src/: discovery.rs  frame.rs  lib.rs  transport.rs
crates/vk-net/tests/: loopback.rs
crates/vk-platform/: Cargo.toml
crates/vk-platform/src/: lib.rs  stub.rs  windows.rs
