[workspace]
resolver = "2"
members = [
    "crates/vk-core",
    "crates/vk-platform",
    "crates/vk-net",
    "crates/vk-media",
    "app/viewerkiller",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "local"

[workspace.dependencies]
# Dépendances internes
vk-core = { path = "crates/vk-core" }
vk-platform = { path = "crates/vk-platform" }
vk-net = { path = "crates/vk-net" }
vk-media = { path = "crates/vk-media" }

# Dépendances externes partagées
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
anyhow = "1"
thiserror = "2"
snow = "0.9"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync"] }
if-addrs = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1"
jpeg-encoder = "0.6"
jpeg-decoder = "0.3"
miniz_oxide = "0.8"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
