[workspace]
resolver = "2"
members = [
    "crates/vk-core",
    "crates/vk-platform",
    "crates/vk-net",
    "crates/vk-media",
    "app/viewerkiller",
]

[workspace.package]
version = "0.1.22"
edition = "2021"
# Source-visible, non commerciale, sans modification, avec attribution —
# voir le fichier LICENSE. Pas une licence libre / open source.
license = "LicenseRef-SourceAvailable-NonCommercial-NoDerivatives"
# Empêche toute publication accidentelle sur crates.io (non open source).
publish = false
rust-version = "1.80"
repository = "local"

[workspace.dependencies]
# Dépendances internes
vk-core = { path = "crates/vk-core" }
vk-platform = { path = "crates/vk-platform" }
vk-net = { path = "crates/vk-net" }
vk-media = { path = "crates/vk-media" }

# Dépendances externes partagées
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
anyhow = "1"
thiserror = "2"
snow = "0.9"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync"] }
if-addrs = "0.13"
# egui 0.29 : API stable et maîtrisée (les 0.3x ultérieures ont refondu l'API).
eframe = "0.29"
egui = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1"
jpeg-encoder = "0.6"
jpeg-decoder = "0.3"
miniz_oxide = "0.8"
rand = "0.8"
# Client HTTP léger pour la vérification de mise à jour (J16a). TLS = native-tls
# (OpenSSL sur Linux, SChannel sur Windows) plutôt que rustls/ring, pour éviter
# une compilation C à la cross-vérification Windows depuis Linux.
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
serde_json = "1"
# Vérification d'intégrité SHA256 des binaires téléchargés (auto-update, J16b).
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "thin"
