[package]
name = "viewerkiller"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "viewerkiller"
path = "src/lib.rs"

[[bin]]
name = "viewerkiller"
path = "src/main.rs"

[[bin]]
name = "viewerkiller-gui"
path = "src/gui.rs"

[dependencies]
vk-core.workspace = true
vk-platform.workspace = true
vk-net.workspace = true
vk-media.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
if-addrs.workspace = true
rand.workspace = true
eframe.workspace = true
egui.workspace = true
ureq.workspace = true
native-tls.workspace = true
serde_json.workspace = true
sha2.workspace = true
