[package]
name = "vk-media"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vk-core.workspace = true
vk-platform.workspace = true
thiserror.workspace = true
jpeg-encoder.workspace = true
jpeg-decoder.workspace = true
miniz_oxide.workspace = true
