[package]
name = "vk-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
vk-core.workspace = true
anyhow.workspace = true

# Implémentation native Windows (capture GDI + injection SendInput), tirée
# uniquement pour la cible Windows, via le crate officiel `windows`.
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]

# Presse-papiers (synchronisation façon RDP), Windows uniquement : évite de
# tirer les backends X11/Wayland d'arboard sur la CI Linux.
[target.'cfg(windows)'.dependencies.arboard]
version = "3"
default-features = false
